colliding dates
